--- a/dicoding-blog/src/styles/main.css
+++ b/dicoding-blog/src/styles/main.css
@@ -43,34 +43,28 @@ body {
   color: #212121;
 }
 
+.header__menu {
+  font-size: 32px;
+  margin: 10px auto;
+  display: block;
+  width: 30px;
+}
+
 /*
  * Top level navigation
  */
-
-#drawer {
-  width: 250px;
-  height: 100%;
-  position: absolute;
-  /* menyembunyikan #drawer -250px (sesuai dengan ukuran lebar drawer) ke kiri */
-  transform: translate(-250px, 0);
-  transition: transform 0.3s ease-in-out;
-  background-color: #111;
-}
-#drawer.open {
-  transform: translate(0, 0);
-}
 
 .nav {
   width: 100%;
   margin-left: auto;
   margin-right: auto;
+  text-align: center;
 }
 
 .nav__list {
   width: 100%;
   padding: 0;
   margin: 0;
-  text-align: center;
 }
 
 .nav__item {
@@ -166,16 +160,16 @@ main {
 
 .headline__content {
   width: 100%;
-  padding: 16px 32px;
+  padding: 16px 0;
 }
 
 .headline__title {
-  font-size: 32px;
+  font-size: 24px;
   font-weight: 500;
 }
 
 .headline__description {
-  font-size: 16px;
+  font-size: 12px;
   margin-top: 12px;
 }
 
@@ -239,7 +233,7 @@ main {
 }
 
 .post-item__content {
-  padding: 16px 32px 32px 32px;
+  padding: 16px;
 }
 
 .post-item__thumbnail {
@@ -259,7 +253,7 @@ main {
 
 .post-item__title {
   font-weight: 500;
-  font-size: 18px;
+  font-size: 16px;
   margin-top: 16px;
   transition: 0.3s opacity;
 }
@@ -275,7 +269,7 @@ main {
 
 .post-item__description {
   margin-top: 16px;
-  font-size: 14px;
+  font-size: 12px;
   line-height: 1.5em;
 }
 
