--- a/restaurant-apps/src/styles/main.css
+++ b/restaurant-apps/src/styles/main.css
@@ -1,17 +1,42 @@
+:root {
+  --primary-bg: #fa4a0c;
+  --secondary-bg: #ffffff;
+  --third-bg: #e5e5e5;
+  --font-pm: #929292;
+  --font-title: #666666;
+}
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
 }
 
+a {
+  cursor: pointer;
+}
+.container {
+  padding: 0 30px;
+}
+
+/* navbar */
+.img-logo {
+  width: 20%;
+}
 .topnav {
   overflow: hidden;
-  background-color: #333;
+  background-color: #fff;
+  /* display: flex;
+  justify-content: center;
+  align-items: center; */
 }
 
 .topnav a {
   float: left;
   display: block;
-  color: #f2f2f2;
+  color: #000;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
@@ -19,13 +44,11 @@ body {
 }
 
 .topnav a:hover {
-  background-color: #ddd;
   color: black;
 }
 
 .topnav a.active {
-  background-color: #04aa6d;
-  color: white;
+  color: var(--primary-bg);
 }
 
 .topnav .icon {
