--- a/restaurant-apps/src/templates/index.html
+++ b/restaurant-apps/src/templates/index.html
@@ -2,13 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Restaurant - Bella Onoje's</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
   </head>
-  <body>
+
+  <body class="container">
     <header>
       <nav>
         <div class="topnav" id="myTopnav">
-          <a href="#home" class="active">Home</a>
+          <img src="./images/logo.png" alt="" class="img-logo" />
 
           <div class="topnav-right">
             <a href="#">Home</a>
@@ -23,7 +29,18 @@
         </div>
       </nav>
     </header>
-    <h1>Restaurant Apps Starter Project</h1>
+
+    <script>
+      function myFunction() {
+        var x = document.getElementById("myTopnav");
+        if (x.className === "topnav") {
+          x.className += " responsive";
+        } else {
+          x.className = "topnav";
+        }
+      }
+    </script>
+    <!-- <h1>Restaurant Apps Starter Project</h1>
     <p>Hallo coders! Anda berhasil menjalankan starter project.</p>
     <p>
       Jangan lupa untuk menggunakan salah satu gambar yang berada pada
@@ -32,6 +49,6 @@
     <img src="./images/heros/hero-image_1.jpg" width="450" alt="" />
     <img src="./images/heros/hero-image_2.jpg" width="450" alt="" />
     <img src="./images/heros/hero-image_3.jpg" width="450" alt="" />
-    <img src="./images/heros/hero-image_4.jpg" width="450" alt="" />
+    <img src="./images/heros/hero-image_4.jpg" width="450" alt="" /> -->
   </body>
 </html>
