--- a/restaurant-apps/src/templates/index.html
+++ b/restaurant-apps/src/templates/index.html
@@ -18,6 +18,7 @@
 
           <div class="topnav-right">
             <a href="#">Home</a>
+            <a href="#">contact</a>
             <a href="#">Favorit</a>
             <a href="https://linkedin.com/in/nicogulo/" target="_blank"
               >About us</a
@@ -30,16 +31,6 @@
       </nav>
     </header>
 
-    <script>
-      function myFunction() {
-        var x = document.getElementById("myTopnav");
-        if (x.className === "topnav") {
-          x.className += " responsive";
-        } else {
-          x.className = "topnav";
-        }
-      }
-    </script>
     <!-- <h1>Restaurant Apps Starter Project</h1>
     <p>Hallo coders! Anda berhasil menjalankan starter project.</p>
     <p>
