--- a/restaurant-apps/src/templates/index.html
+++ b/restaurant-apps/src/templates/index.html
@@ -16,8 +16,8 @@
         <div class="topnav" id="myTopnav">
           <img src="./images/logo.png" alt="" class="img-logo" />
 
-          <div class="topnav-right">
-            <a href="#">Home</a>
+          <div class="topnav topnav-right">
+            <a href="#" class="active">Home</a>
             <a href="#">contact</a>
             <a href="#">Favorit</a>
             <a href="https://linkedin.com/in/nicogulo/" target="_blank"
@@ -30,7 +30,13 @@
         </div>
       </nav>
     </header>
-
+    <div class="hero">
+      <div class="hero__inner">
+        <h1 class="hero__title">Why stay hungry when</h1>
+        <p class="hero__tagline">you can order form Bella Onojie</p>
+      </div>
+    </div>
+    <div id="card-container"></div>
     <!-- <h1>Restaurant Apps Starter Project</h1>
     <p>Hallo coders! Anda berhasil menjalankan starter project.</p>
     <p>
