show data resto

--- a/restaurant-apps/src/templates/index.html
+++ b/restaurant-apps/src/templates/index.html
@@ -36,7 +36,9 @@
         <p class="hero__tagline">you can order form Bella Onojie</p>
       </div>
     </div>
-    <div id="card-container"></div>
+    <div class="restaurants">
+      <h1 class="restaurants-label">Explore Restaurants</h1>
+    </div>
     <!-- <h1>Restaurant Apps Starter Project</h1>
     <p>Hallo coders! Anda berhasil menjalankan starter project.</p>
     <p>
