--- a/restaurant-apps/src/styles/main.css
+++ b/restaurant-apps/src/styles/main.css
@@ -98,3 +98,20 @@ a {
   font-size: 18px;
   font-weight: 300;
 }
+
+.restaurants {
+  width: 100%;
+  margin: 60px auto;
+  text-align: center;
+}
+.restaurants-label {
+  font-size: 32px;
+  font-weight: lighter;
+}
+
+.restaurants-label::after {
+  content: "";
+  margin-top: 16px;
+  display: block;
+  border-bottom: 1px solid #eeeeee;
+}
