--- a/restaurant-apps/src/templates/index.html
+++ b/restaurant-apps/src/templates/index.html
@@ -29,16 +29,23 @@
           </a>
         </div>
       </nav>
-    </header>
-    <div class="hero">
-      <div class="hero__inner">
-        <h1 class="hero__title">Why stay hungry when</h1>
-        <p class="hero__tagline">you can order form Bella Onojie</p>
+      <div class="hero">
+        <div class="hero__inner">
+          <h1 class="hero__title">Why stay hungry when</h1>
+          <p class="hero__tagline">you can order form Bella Onojie</p>
+        </div>
       </div>
-    </div>
-    <div class="restaurants">
-      <h1 class="restaurants-label">Explore Restaurants</h1>
-    </div>
+    </header>
+    <main>
+      <section class="content">
+        <div class="restaurants">
+          <h1 class="restaurants-label">Explore Restaurants</h1>
+          <div>
+            <div id="posts"></div>
+          </div>
+        </div>
+      </section>
+    </main>
     <!-- <h1>Restaurant Apps Starter Project</h1>
     <p>Hallo coders! Anda berhasil menjalankan starter project.</p>
     <p>
