--- a/restaurant-apps/src/styles/main.css
+++ b/restaurant-apps/src/styles/main.css
@@ -9,11 +9,19 @@
   box-sizing: border-box;
 }
 
-body {
+body,
+html {
   margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
   font-family: Arial, Helvetica, sans-serif;
 }
-
+body {
+  font-family: "Roboto", sans-serif;
+  font-size: 12px;
+  color: #424242;
+}
 a {
   cursor: pointer;
 }
@@ -72,15 +80,7 @@ a {
   background-position: center;
   background-repeat: no-repeat;
 }
-/* .hero::before {
-  content: "";
-  position: absolute;
-  top: 0px;
-  right: 0px;
-  bottom: 0px;
-  left: 0px;
-  background-color: rgba(0, 0, 0, 0.25);
-} */
+
 .hero__inner {
   margin: 0 auto;
   max-width: 800px;
@@ -99,6 +99,19 @@ a {
   font-weight: 300;
 }
 
+/*
+ * main
+ */
+
+main {
+  width: 100%;
+  margin: 0 auto;
+}
+
+.content {
+  padding: 32px;
+}
+
 .restaurants {
   width: 100%;
   margin: 60px auto;
@@ -114,4 +127,65 @@ a {
   margin-top: 16px;
   display: block;
   border-bottom: 1px solid #eeeeee;
+}
+
+/*
+ * post
+ */
+
+.posts {
+  margin: 32px auto auto;
+  text-align: left;
+}
+
+/*
+ * post item
+ */
+
+.post-item {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  width: 100%;
+  border-radius: 5px;
+  overflow: hidden;
+}
+
+.post-item__content {
+  padding: 16px;
+}
+
+.post-item__thumbnail {
+  width: 100%;
+}
+
+.post-item__city {
+  font-size: 10px;
+  text-transform: uppercase;
+  color: #999;
+}
+
+.post-item__date__author {
+  color: red;
+  text-decoration: none;
+}
+
+.post-item__title {
+  font-weight: 500;
+  font-size: 16px;
+  margin-top: 16px;
+  transition: 0.3s opacity;
+}
+
+.post-item__title:hover {
+  opacity: 0.5;
+}
+
+.post-item__title a {
+  text-decoration: none;
+  color: inherit;
+}
+
+.post-item__description {
+  margin-top: 16px;
+  font-size: 12px;
+  line-height: 1.5em;
 }
