--- a/restaurant-apps/src/styles/responsive.css
+++ b/restaurant-apps/src/styles/responsive.css
@@ -1,4 +1,9 @@
-@media screen and (max-width: 600px) {
+.posts {
+  display: grid;
+  grid-row-gap: 16px;
+}
+
+@media screen and (max-width: 650px) {
   .topnav a:not(:first-child) {
     display: none;
   }
@@ -8,7 +13,7 @@
   }
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 650px) {
   .topnav.responsive {
     position: relative;
   }
@@ -21,5 +26,38 @@
     float: none;
     display: block;
     text-align: left;
+  }
+  .post-item__content {
+    padding: 16px 32px 32px 32px;
+  }
+
+  .post-item__title {
+    font-size: 18px;
+  }
+
+  .post-item__description {
+    font-size: 14px;
+  }
+}
+
+@media screen and (min-width: 700px) {
+  .posts {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-column-gap: 10px;
+    grid-row-gap: 16px;
+  }
+}
+
+@media screen and (min-width: 900px) {
+  .posts {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  main {
+    max-width: 1200px;
   }
 }
