--- a/restaurant-apps/src/styles/responsive.css
+++ b/restaurant-apps/src/styles/responsive.css
@@ -3,7 +3,7 @@
   grid-row-gap: 16px;
 }
 
-@media screen and (max-width: 650px) {
+@media screen and (min-width: 650px) {
   .topnav a:not(:first-child) {
     display: none;
   }
@@ -11,9 +11,6 @@
     float: right;
     display: block;
   }
-}
-
-@media screen and (max-width: 650px) {
   .topnav.responsive {
     position: relative;
   }
