--- a/restaurant-apps/src/templates/index.html
+++ b/restaurant-apps/src/templates/index.html
@@ -29,7 +29,7 @@
           </a>
         </div>
       </nav>
-      <div class="hero">
+      <div class="hero" role="img" aria-label="hero">
         <div class="hero__inner">
           <h1 class="hero__title">Why stay hungry when</h1>
           <p class="hero__tagline">you can order form Bella Onojie</p>
@@ -40,9 +40,7 @@
       <section class="content">
         <div class="restaurants">
           <h1 class="restaurants-label">Explore Restaurants</h1>
-          <div>
-            <div id="posts"></div>
-          </div>
+          <div id="posts" class="posts"></div>
         </div>
       </section>
     </main>
