--- a/restaurant-apps/src/templates/index.html
+++ b/restaurant-apps/src/templates/index.html
@@ -6,29 +6,52 @@
     <title>Restaurant - Bella Onoje's</title>
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+      href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+      integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
+      crossorigin="anonymous"
+    />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap"
+      rel="stylesheet"
     />
   </head>
 
   <body class="container">
     <header>
       <nav>
-        <div class="topnav" id="myTopnav">
+        <!-- <div class="topnav topnav-right" id="myTopnav">
           <img src="./images/logo.png" alt="" class="img-logo" />
 
-          <div class="topnav topnav-right">
-            <a href="#" class="active">Home</a>
-            <a href="#">contact</a>
-            <a href="#">Favorit</a>
-            <a href="https://linkedin.com/in/nicogulo/" target="_blank"
-              >About us</a
-            >
-          </div>
+          <a href="#">Home</a>
+          <a href="#">contact</a>
+          <a href="#">Favorit</a>
+          <a href="https://linkedin.com/in/nicogulo/" target="_blank"
+            >About us</a
+          >
+
           <a href="javascript:void(0);" class="icon" onclick="myFunction()">
             <i class="fa fa-bars"></i>
           </a>
-        </div>
+        </div> -->
+        <ul class="menu">
+          <li class="logo"><a href="#">Creative Mind Agency</a></li>
+          <a class="item" href="#">Home</a>
+          <a class="item" href="#">contact</a>
+          <a class="item" href="#">Favorit</a>
+          <a
+            class="item"
+            href="https://linkedin.com/in/nicogulo/"
+            target="_blank"
+            >About us</a
+          >
+
+          <li class="toggle">
+            <a href="#"><i class="fa fa-bars"></i></a>
+          </li>
+        </ul>
       </nav>
+
       <div class="hero" role="img" aria-label="hero">
         <div class="hero__inner">
           <h1 class="hero__title">Why stay hungry when</h1>
