--- a/restaurant-apps/src/templates/index.html
+++ b/restaurant-apps/src/templates/index.html
@@ -35,7 +35,11 @@
           </a>
         </div> -->
         <ul class="menu">
-          <li class="logo"><a href="#">Creative Mind Agency</a></li>
+          <li class="logo">
+            <a href="#"
+              ><img src="./images/logo.png" alt="" class="img-logo"
+            /></a>
+          </li>
           <a class="item" href="#">Home</a>
           <a class="item" href="#">contact</a>
           <a class="item" href="#">Favorit</a>
