--- a/restaurant-apps/src/styles/main.css
+++ b/restaurant-apps/src/styles/main.css
@@ -6,6 +6,8 @@
   --font-title: #666666;
 }
 * {
+  padding: 0;
+  margin: 0;
   box-sizing: border-box;
 }
 
@@ -18,12 +20,9 @@ html {
   font-family: "Poppins", sans-serif;
 }
 
-a {
-  cursor: pointer;
-}
-.container {
+/* .container {
   padding: 0 30px;
-}
+} */
 
 /* navbar */
 .img-logo {
@@ -73,42 +72,8 @@ a {
 .active .item {
   display: block;
 }
-/* Tablet menu */
-@media all and (min-width: 700px) {
-  .menu {
-    justify-content: center;
-  }
-  .logo {
-    flex: 1;
-  }
 
-  .toggle {
-    flex: 1;
-    text-align: right;
-    order: 2;
-  }
-}
-/* Desktop menu */
-@media all and (min-width: 960px) {
-  .menu {
-    flex-wrap: nowrap;
-    background: none;
-  }
-  .logo {
-    order: 0;
-  }
-  .item {
-    order: 1;
-    position: relative;
-    display: block;
-    width: auto;
-  }
-  .toggle {
-    display: none;
-  }
-}
-
-/*  */
+/* Jumbotron */
 
 .hero {
   display: flex;
@@ -118,7 +83,7 @@ a {
   text-align: center;
   background-image: url("../public/images/heros/hero.jpg");
   background-position: center;
-  background-repeat: no-repeat;
+  background-color: green;
 }
 
 .hero__inner {
@@ -188,7 +153,7 @@ main {
 .post-item {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   width: 100%;
-  border-radius: 5px;
+  border-radius: 10px;
   overflow: hidden;
 }
 
@@ -198,11 +163,19 @@ main {
 
 .post-item__thumbnail {
   width: 100%;
+  transform: scale(1.1);
+}
+.post-item__thumbnail {
+  transition: transform 0.5s, filter 1.5s ease-in-out;
+  filter: grayscale(100%);
+}
+.post-item__thumbnail:hover {
+  filter: grayscale(0);
+  transform: scale(1);
 }
 
 .post-item__city {
   font-family: "Poppins";
-
   text-transform: uppercase;
   color: var(--font-title);
 }
@@ -213,6 +186,7 @@ main {
   font-size: 16px;
   margin-top: 16px;
   transition: 0.3s opacity;
+  cursor: pointer;
 }
 
 .post-item__title:hover {
