--- a/restaurant-apps/src/styles/responsive.css
+++ b/restaurant-apps/src/styles/responsive.css
@@ -3,52 +3,7 @@
   grid-row-gap: 16px;
 }
 
-@media screen and (max-width: 600px) {
-  .topnav a:not(:first-child) {
-    display: none;
-  }
-  .topnav a.icon {
-    float: right;
-    display: block;
-  }
-}
-@media screen and (max-width: 600px) {
-  .topnav.responsive {
-    position: relative;
-  }
-  .topnav.responsive .icon {
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
-  .topnav.responsive a {
-    float: none;
-    display: block;
-    text-align: left;
-  }
-}
-
 @media screen and (min-width: 650px) {
-  .topnav a:not(:first-child) {
-    display: none;
-  }
-  .topnav a.icon {
-    float: right;
-    display: block;
-  }
-  .topnav.responsive {
-    position: relative;
-  }
-  .topnav.responsive .icon {
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
-  .topnav.responsive a {
-    float: none;
-    display: block;
-    text-align: left;
-  }
   .post-item__content {
     padding: 16px 32px 32px 32px;
   }
@@ -62,7 +17,20 @@
   }
 }
 
+/* Tablet menu */
 @media screen and (min-width: 700px) {
+  .menu {
+    justify-content: center;
+  }
+  .logo {
+    flex: 1;
+  }
+
+  .toggle {
+    flex: 1;
+    text-align: right;
+    order: 2;
+  }
   .posts {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -71,10 +39,27 @@
   }
 }
 
+/* Desktop menu */
 @media screen and (min-width: 900px) {
   .posts {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
+  }
+  .menu {
+    flex-wrap: nowrap;
+    background: none;
+  }
+  .logo {
+    order: 0;
+  }
+  .item {
+    order: 1;
+    position: relative;
+    display: block;
+    width: auto;
+  }
+  .toggle {
+    display: none;
   }
 }
 
