--- a/restaurant-apps/src/templates/index.html
+++ b/restaurant-apps/src/templates/index.html
@@ -17,9 +17,9 @@
     />
   </head>
 
-  <body class="container">
+  <body>
     <header>
-      <nav>
+      <nav class="container">
         <!-- <div class="topnav topnav-right" id="myTopnav">
           <img src="./images/logo.png" alt="" class="img-logo" />
 
