--- a/restaurant-apps/src/styles/main.css
+++ b/restaurant-apps/src/styles/main.css
@@ -39,11 +39,11 @@ a {
   list-style-type: none;
 }
 .logo {
-  font-size: 20px;
   padding: 7.5px 10px 7.5px 0;
 }
 .item {
   padding: 10px;
+  font-size: 14px;
 }
 
 /* Mobile menu */
@@ -163,6 +163,7 @@ main {
 
 .post-item__thumbnail {
   width: 100%;
+  height: 240px;
   transform: scale(1.1);
 }
 .post-item__thumbnail {
@@ -176,6 +177,14 @@ main {
 
 .post-item__city {
   font-family: "Poppins";
+  font-size: 14px;
+  text-transform: uppercase;
+  color: var(--font-title);
+  padding-bottom: 6px;
+}
+.post-item__rating {
+  font-family: "Poppins";
+  font-size: 14px;
   text-transform: uppercase;
   color: var(--font-title);
 }
@@ -183,7 +192,7 @@ main {
 .post-item__title {
   font-family: "Poppins";
   font-weight: 500;
-  font-size: 16px;
+  font-size: 24px;
   margin-top: 16px;
   transition: 0.3s opacity;
   cursor: pointer;
