--- a/restaurant-apps/src/styles/responsive.css
+++ b/restaurant-apps/src/styles/responsive.css
@@ -4,12 +4,24 @@
 }
 
 @media screen and (min-width: 650px) {
+  .menu {
+    justify-content: center;
+  }
+  .logo {
+    flex: 1;
+  }
+
+  .toggle {
+    flex: 1;
+    text-align: right;
+    order: 2;
+  }
   .post-item__content {
     padding: 16px 32px 32px 32px;
   }
 
   .post-item__title {
-    font-size: 18px;
+    font-size: 24px;
   }
 
   .post-item__description {
