--- a/restaurant-apps/src/templates/index.html
+++ b/restaurant-apps/src/templates/index.html
@@ -20,29 +20,14 @@
   <body>
     <header>
       <nav class="container">
-        <!-- <div class="topnav topnav-right" id="myTopnav">
-          <img src="./images/logo.png" alt="" class="img-logo" />
-
-          <a href="#">Home</a>
-          <a href="#">contact</a>
-          <a href="#">Favorit</a>
-          <a href="https://linkedin.com/in/nicogulo/" target="_blank"
-            >About us</a
-          >
-
-          <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-            <i class="fa fa-bars"></i>
-          </a>
-        </div> -->
         <ul class="menu">
           <li class="logo">
             <a href="#"
               ><img src="./images/logo.png" alt="" class="img-logo"
             /></a>
           </li>
-          <a class="item" href="#">Home</a>
-          <a class="item" href="#">contact</a>
-          <a class="item" href="#">Favorit</a>
+          <a class="item" href="/">Home</a>
+          <a class="item" href="#">Favorite</a>
           <a
             class="item"
             href="https://linkedin.com/in/nicogulo/"
@@ -60,6 +45,10 @@
         <div class="hero__inner">
           <h1 class="hero__title">Why stay hungry when</h1>
           <p class="hero__tagline">you can order form Bella Onojie</p>
+          <button class="explore">
+            Explore<span class="icon-right"></span
+            ><span class="icon-right after"></span>
+          </button>
         </div>
       </div>
     </header>
@@ -72,15 +61,60 @@
         </div>
       </section>
     </main>
-    <!-- <h1>Restaurant Apps Starter Project</h1>
-    <p>Hallo coders! Anda berhasil menjalankan starter project.</p>
-    <p>
-      Jangan lupa untuk menggunakan salah satu gambar yang berada pada
-      ./images/heros sebagai background hero elemen
-    </p>
-    <img src="./images/heros/hero-image_1.jpg" width="450" alt="" />
-    <img src="./images/heros/hero-image_2.jpg" width="450" alt="" />
-    <img src="./images/heros/hero-image_3.jpg" width="450" alt="" />
-    <img src="./images/heros/hero-image_4.jpg" width="450" alt="" /> -->
+
+    <footer class="site-footer">
+      <div class="container">
+        <div>
+          <p>
+            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+            Copyright &copy;
+            <script>
+              document.write(new Date().getFullYear());
+            </script>
+            All rights reserved made by
+            <a
+              href="https://instagram.com/_nanithefvck"
+              target="_blank"
+              class="text-primary"
+              >Nico Gulo</a
+            >
+            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+          </p>
+        </div>
+
+        <div class="social">
+          <a
+            href="https://facebook.com/comunity.abdn"
+            class="social-item"
+            target="blank"
+            ><span class="fab fa-facebook"></span
+          ></a>
+          <a
+            href="https://twitter.com/_xnfvk"
+            class="social-item"
+            target="blank"
+            ><span class="fab fa-twitter"></span
+          ></a>
+          <a
+            href="https://instagram.com/_nanithefvck"
+            class="social-item"
+            target="blank"
+            ><span class="fab fa-instagram"></span
+          ></a>
+          <a
+            href="https://linkedin.com/in/nicogulo"
+            class="social-item"
+            target="blank"
+            ><span class="fab fa-linkedin"></span
+          ></a>
+          <a
+            href="https://github.com/nicogulo"
+            class="social-item"
+            target="blank"
+            ><span class="fab fa-github"></span
+          ></a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
