--- a/restaurant-apps/src/styles/main.css
+++ b/restaurant-apps/src/styles/main.css
@@ -92,18 +92,107 @@ a {
 }
 
 .hero__title {
-  color: #fff;
+  color: var(--secondary-bg);
   font-family: Poppins;
   font-weight: 500;
   font-size: 36px;
 }
 
 .hero__tagline {
-  color: #fff;
+  color: var(--secondary-bg);
   margin-top: 16px;
   font-family: Poppins;
   font-size: 18px;
   font-weight: 300;
+}
+/* Button */
+button {
+  font-family: "Poppins", sans-serif;
+  letter-spacing: 1px;
+  background: none;
+  color: white;
+  position: relative;
+  outline: none;
+  border: none;
+  height: 50px;
+  width: 190px;
+  font-size: 14px;
+  z-index: 2;
+  transition: 0.01s 0.23s ease-out all;
+  overflow: hidden;
+}
+button:before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 55%;
+  background: var(--primary-bg);
+  z-index: -1;
+  transition: 0.3s ease-in all;
+}
+button:after {
+  content: "";
+  position: absolute;
+  left: -5%;
+  top: 5%;
+  height: 90%;
+  width: 5%;
+  background: white;
+  z-index: -1;
+  transition: 0.4s 0.02s ease-in all;
+}
+button:hover {
+  cursor: pointer;
+  color: transparent;
+}
+button:hover:before {
+  left: 100%;
+  width: 25%;
+}
+button:hover:after {
+  left: 100%;
+  width: 70%;
+}
+button:hover .icon-right.after:after {
+  left: -80px;
+  color: white;
+  transition: 0.2s 0.2s ease all;
+}
+button:hover .icon-right.after:before {
+  left: -104px;
+  top: 14px;
+  opacity: 1;
+  color: var(--primary-bg);
+}
+
+.icon-right {
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+.icon-right:after {
+  font-family: "FontAwesome";
+  content: "→";
+  font-size: 24px;
+  display: inline-block;
+  position: relative;
+  top: 26px;
+  transform: translate3D(0, -50%, 0);
+}
+.icon-right.after:after {
+  left: -250px;
+  color: black;
+  transition: 0.15s 0.25s ease left, 0.5s 0.05s ease color;
+}
+.icon-right.after:before {
+  content: "Explore";
+  position: absolute;
+  left: -230px;
+  top: 14px;
+  opacity: 0;
+  transition: 0.2s ease-in all;
 }
 
 /*
@@ -128,6 +217,7 @@ main {
   font-family: "Poppins";
   font-size: 32px;
   font-weight: lighter;
+  color: var(--primary-bg);
 }
 
 .restaurants-label::after {
@@ -196,6 +286,7 @@ main {
   margin-top: 16px;
   transition: 0.3s opacity;
   cursor: pointer;
+  color: var(--primary-bg);
 }
 
 .post-item__title:hover {
@@ -211,4 +302,34 @@ main {
   margin-top: 16px;
   font-size: 12px;
   line-height: 1.5em;
+}
+
+footer {
+  background-color: var(--primary-bg);
+  padding: 2em;
+  width: 100%;
+  text-align: center;
+}
+footer p {
+  margin: 0 auto;
+  display: inline-block;
+  color: var(--secondary-bg);
+}
+
+footer .social {
+  display: flex;
+  justify-content: center;
+  padding-top: 20px;
+  text-decoration: none;
+}
+
+.social-item {
+  display: inline-block;
+  width: 60px;
+  height: 60px;
+  position: relative;
+  border-radius: 50%;
+  font-size: 22px;
+  margin: 0 10px;
+  color: var(--secondary-bg);
 }
