--- a/restaurant-apps/src/templates/index.html
+++ b/restaurant-apps/src/templates/index.html
@@ -45,17 +45,19 @@
         <div class="hero__inner">
           <h1 class="hero__title">Why stay hungry when</h1>
           <p class="hero__tagline">you can order form Bella Onojie</p>
-          <button class="explore">
-            Explore<span class="icon-right"></span
-            ><span class="icon-right after"></span>
-          </button>
+          <a href="#explore">
+            <button class="explore">
+              Explore<span class="icon-right"></span
+              ><span class="icon-right after"></span>
+            </button>
+          </a>
         </div>
       </div>
     </header>
     <main>
       <section class="content">
         <div class="restaurants">
-          <h1 class="restaurants-label">Explore Restaurants</h1>
+          <h1 class="restaurants-label" id="explore">Explore Restaurants</h1>
 
           <div id="posts" class="posts"></div>
         </div>
@@ -66,7 +68,6 @@
       <div class="container">
         <div>
           <p>
-            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
             Copyright &copy;
             <script>
               document.write(new Date().getFullYear());
@@ -78,7 +79,6 @@
               class="text-primary"
               >Nico Gulo</a
             >
-            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
           </p>
         </div>
 
