--- a/restaurant-apps/src/styles/main.css
+++ b/restaurant-apps/src/styles/main.css
@@ -18,6 +18,7 @@ html {
   width: 100%;
   height: 100%;
   font-family: "Poppins", sans-serif;
+  scroll-behavior: smooth;
 }
 
 .container {
@@ -205,7 +206,10 @@ main {
 }
 
 .content {
-  padding: 32px;
+  padding-top: 70px;
+  padding-right: 32px;
+  padding-left: 32px;
+  padding-bottom: 32px;
 }
 
 .restaurants {
@@ -217,12 +221,14 @@ main {
   font-family: "Poppins";
   font-size: 32px;
   font-weight: lighter;
+
   color: var(--primary-bg);
 }
 
 .restaurants-label::after {
   content: "";
   margin-top: 16px;
+  padding-bottom: 32px;
   display: block;
   border-bottom: 1px solid #eeeeee;
 }
