--- a/restaurant-apps/src/styles/main.css
+++ b/restaurant-apps/src/styles/main.css
@@ -101,11 +101,10 @@ a {
 
 .hero__tagline {
   color: var(--secondary-bg);
-  margin-top: 16px;
-  font-family: Poppins;
   font-size: 18px;
   font-weight: 300;
 }
+
 /* Button */
 button {
   font-family: "Poppins", sans-serif;
@@ -117,6 +116,7 @@ button {
   border: none;
   height: 50px;
   width: 190px;
+  margin-top: 12px;
   font-size: 14px;
   z-index: 2;
   transition: 0.01s 0.23s ease-out all;
@@ -196,9 +196,7 @@ button:hover .icon-right.after:before {
   transition: 0.2s ease-in all;
 }
 
-/*
- * main
- */
+/* main */
 
 main {
   width: 100%;
@@ -233,9 +231,7 @@ main {
   border-bottom: 1px solid #eeeeee;
 }
 
-/*
- * post
- */
+/* post */
 
 .posts {
   margin: 32px auto auto;
@@ -310,6 +306,7 @@ main {
   line-height: 1.5em;
 }
 
+/* Footer */
 footer {
   background-color: var(--primary-bg);
   padding: 2em;
