--- a/restaurant-apps/src/templates/index.html
+++ b/restaurant-apps/src/templates/index.html
@@ -19,6 +19,7 @@
 
   <body>
     <header>
+      <!-- Navbar -->
       <nav class="container">
         <ul class="menu">
           <li class="logo">
@@ -32,15 +33,15 @@
             class="item"
             href="https://linkedin.com/in/nicogulo/"
             target="_blank"
-            >About us</a
-          >
-
+            >About us
+          </a>
           <li class="toggle">
             <a href="#"><i class="fa fa-bars"></i></a>
           </li>
         </ul>
       </nav>
 
+      <!-- Hero Jumbotron -->
       <div class="hero" role="img" aria-label="hero">
         <div class="hero__inner">
           <h1 class="hero__title">Why stay hungry when</h1>
@@ -54,16 +55,18 @@
         </div>
       </div>
     </header>
+
+    <!-- Main -->
     <main>
       <section class="content">
         <div class="restaurants">
           <h1 class="restaurants-label" id="explore">Explore Restaurants</h1>
-
           <div id="posts" class="posts"></div>
         </div>
       </section>
     </main>
 
+    <!-- Footer -->
     <footer class="site-footer">
       <div class="container">
         <div>
@@ -73,11 +76,8 @@
               document.write(new Date().getFullYear());
             </script>
             All rights reserved made by
-            <a
-              href="https://instagram.com/_nanithefvck"
-              target="_blank"
-              class="text-primary"
-              >Nico Gulo</a
+            <a href="https://instagram.com/_nanithefvck" target="_blank"
+              >Bella Onoje's | Nico Gulo</a
             >
           </p>
         </div>
