--- a/restaurant-apps/src/templates/index.html
+++ b/restaurant-apps/src/templates/index.html
@@ -18,19 +18,20 @@
   </head>
 
   <body>
+    <a href="#maincontent" class="skip-link">Menuju ke konten</a>
     <header>
       <!-- Navbar -->
       <nav class="container">
         <ul class="menu">
           <li class="logo">
-            <a href="#"
+            <a href="#maincontent"
               ><img src="./images/logo.png" alt="" class="img-logo"
             /></a>
           </li>
           <a class="item" href="/">Home</a>
           <a class="item" href="#">Favorite</a>
           <a
-            class="item"
+            class="item icon"
             href="https://linkedin.com/in/nicogulo/"
             target="_blank"
             >About us
@@ -57,7 +58,7 @@
     </header>
 
     <!-- Main -->
-    <main>
+    <main id="maincontent">
       <section class="content">
         <div class="restaurants">
           <h1 class="restaurants-label" id="explore">Explore Restaurants</h1>
