--- a/movie-catalogue/src/templates/index.html
+++ b/movie-catalogue/src/templates/index.html
@@ -8,6 +8,29 @@
     <title>Movie Catalogue</title>
   </head>
   <body>
-    <h1>Movie Catalogue</h1>
+    <header class="app-bar">
+      <div class="app-bar__men">
+        <button id="hamburgerButton">☰</button>
+      </div>
+      <div class="app-bar__brand">
+        <h1>Movie Catalogue</h1>
+      </div>
+      <nav id="navigationDrawer" class="app-bar__navigation">
+        <ul>
+          <li><a href="#/now-playing">Now Playing</a></li>
+          <li><a href="#/upcoming">Upcoming</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main id="mainContent">
+      <footer>
+        <p>
+          All data obtained from
+          <a href="https://themoviedb.org" target="_blank" rel="noreferrer"
+            >TheMovieDB</a
+          >
+        </p>
+      </footer>
+    </main>
   </body>
 </html>
