--- a/movie-catalogue/src/templates/index.html
+++ b/movie-catalogue/src/templates/index.html
@@ -5,11 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Free movie catalogue for you" />
     <link rel="icon" href="favicon.png" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap"
+      rel="stylesheet"
+    />
+
     <title>Movie Catalogue</title>
   </head>
   <body>
     <header class="app-bar">
-      <div class="app-bar__men">
+      <div class="app-bar__menu">
         <button id="hamburgerButton">☰</button>
       </div>
       <div class="app-bar__brand">
