fix bug, off ectension

--- a/movie-catalogue/src/templates/index.html
+++ b/movie-catalogue/src/templates/index.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
     />
 
-    <title>Movie Catalogue</title>
+    <title>Movie Catalogu</title>
   </head>
   <body>
     <header class="app-bar">
