--- a/movie-catalogue/src/templates/index.html
+++ b/movie-catalogue/src/templates/index.html
@@ -11,7 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap"
       rel="stylesheet"
     />
-
+    <script src="https://use.fontawesome.com/b070c8f1df.js"></script>
     <title>Movie Catalogu</title>
   </head>
   <body>
