--- a/inshokuten-resto/src/styles/responsive.css
+++ b/inshokuten-resto/src/styles/responsive.css
@@ -28,20 +28,20 @@
     margin: 0;
   }
 
-  .movies {
+  .restos {
     grid-template-columns: 1fr 1fr;
   }
 
-  .movie {
+  .resto {
     grid-template-columns: auto 1fr;
   }
 
-  .movie .movie__title {
+  .resto .resto__title {
     grid-column-start: 1;
     grid-column-end: 3;
   }
 
-  .movie .movie__overview {
+  .resto .resto__overview {
     grid-column-start: 1;
     grid-column-end: 3;
   }
@@ -54,19 +54,19 @@
 }
 
 @media screen and (min-width: 850px) {
-  .movies {
+  .restos {
     grid-template-columns: repeat(3, 1fr);
   }
 }
 
 @media screen and (min-width: 1200px) {
-  .movies {
+  .restos {
     grid-template-columns: repeat(4, 1fr);
   }
 }
 
 @media screen and (min-width: 1600px) {
-  .movies {
+  .restos {
     grid-template-columns: repeat(5, 1fr);
   }
 }
