--- a/inshokuten-resto/src/templates/index.html
+++ b/inshokuten-resto/src/templates/index.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
     />
     <script src="https://use.fontawesome.com/b070c8f1df.js"></script>
-    <title>Inshoku-ten list</title>
+    <title>Inshoku-ten</title>
   </head>
   <body>
     <header class="app-bar">
