--- a/inshokuten-resto/src/styles/responsive.css
+++ b/inshokuten-resto/src/styles/responsive.css
@@ -45,6 +45,10 @@
     grid-column-start: 1;
     grid-column-end: 3;
   }
+  .review-container {
+    padding: 10px;
+    margin: 10px auto;
+  }
 }
 
 @media screen and (min-width: 800px) {
