--- a/inshokuten-resto/src/styles/style.css
+++ b/inshokuten-resto/src/styles/style.css
@@ -229,14 +229,14 @@ main {
   color: #fff;
   margin: 2rem auto;
   box-shadow: 1px 3px 2px rgba(0, 0, 0, 0.2);
-  padding: 2.5rem;
+  padding: 1.5rem;
   border-radius: 10px;
 }
 h2 {
   margin-bottom: 3rem;
 }
 .cards {
-  margin-top: 2.5rem;
+  margin: 2.5rem 0.75rem;
 }
 .cards .card {
   width: 100%;
