--- a/inshokuten-resto/src/styles/style.css
+++ b/inshokuten-resto/src/styles/style.css
@@ -10,13 +10,150 @@
   padding: 0;
   margin: 0;
 }
-
+html {
+  scroll-behavior: smooth;
+}
 body {
   font-family: "Poppins", sans-serif;
   background-color: white;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
+}
+
+/* skkip content */
+.skip-link {
+  position: absolute;
+  top: -40px;
+  left: 0;
+  background-color: #bf1722;
+  color: white;
+  padding: 8px;
+  z-index: 100;
+}
+.skip-link:focus {
+  top: 0;
+}
+
+/* hero */
+.hero {
+  display: flex;
+  align-items: center;
+  min-height: 380px;
+  width: 100%;
+  text-align: center;
+  background-image: url("../public/images/heros/hero3.jpg");
+  background-position: center;
+  background-color: var(--primary-bg);
+}
+
+.hero__inner {
+  margin: 0 auto;
+  max-width: 800px;
+}
+
+.hero__title {
+  color: var(--secondary-bg);
+  font-family: Poppins;
+  font-weight: 500;
+  font-size: 36px;
+}
+
+.hero__tagline {
+  color: var(--secondary-bg);
+  font-size: 18px;
+  font-weight: 300;
+}
+
+/* Button */
+button {
+  font-family: "Poppins", sans-serif;
+  letter-spacing: 1px;
+  background: none;
+  color: white;
+  position: relative;
+  outline: none;
+  border: none;
+  height: 50px;
+  width: 190px;
+  margin-top: 12px;
+  font-size: 14px;
+  z-index: 2;
+  transition: 0.01s 0.23s ease-out all;
+  overflow: hidden;
+}
+button:before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 55%;
+  background: var(--primary-bg);
+  z-index: -1;
+  transition: 0.3s ease-in all;
+}
+button:after {
+  content: "";
+  position: absolute;
+  left: -5%;
+  top: 5%;
+  height: 90%;
+  width: 5%;
+  background: white;
+  z-index: -1;
+  transition: 0.4s 0.02s ease-in all;
+}
+button:hover {
+  cursor: pointer;
+  color: transparent;
+}
+button:hover:before {
+  left: 100%;
+  width: 25%;
+}
+button:hover:after {
+  left: 100%;
+  width: 70%;
+}
+button:hover .icon-right.after:after {
+  left: -80px;
+  color: white;
+  transition: 0.2s 0.2s ease all;
+}
+button:hover .icon-right.after:before {
+  left: -104px;
+  top: 14px;
+  opacity: 1;
+  color: var(--primary-bg);
+}
+
+.icon-right {
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+.icon-right:after {
+  font-family: "FontAwesome";
+  content: "→";
+  font-size: 24px;
+  display: inline-block;
+  position: relative;
+  top: 26px;
+  transform: translate3D(0, -50%, 0);
+}
+.icon-right.after:after {
+  left: -250px;
+  color: black;
+  transition: 0.15s 0.25s ease left, 0.5s 0.05s ease color;
+}
+.icon-right.after:before {
+  content: "Explore";
+  position: absolute;
+  left: -230px;
+  top: 14px;
+  opacity: 0;
+  transition: 0.2s ease-in all;
 }
 
 /*
@@ -96,6 +233,27 @@ main {
 .content {
   margin: 0 auto;
   min-height: 100%;
+}
+
+.restaurants {
+  width: 100%;
+  margin: 20px auto;
+  text-align: center;
+}
+.restaurants-label {
+  font-family: "Poppins";
+  font-size: 32px;
+  font-weight: lighter;
+
+  color: var(--primary-bg);
+}
+
+.restaurants-label::after {
+  content: "";
+  margin-top: 16px;
+  padding-bottom: 32px;
+  display: block;
+  border-bottom: 1px solid #eeeeee;
 }
 
 .content .content__heading {
@@ -305,20 +463,33 @@ h2 {
   color: #fff;
 }
 
-/*
-  Footer
-*/
-
+/* Footer */
 footer {
-  padding: 16px;
-}
-
-footer p {
+  background-color: var(--primary-bg);
   text-align: center;
-  color: #aaaaaa;
+}
+footer p {
+  font-size: 16px;
+  margin: 0 auto;
+  padding: 20px;
+  display: inline-block;
+  color: var(--secondary-bg);
+}
+footer a {
+  font-size: 16px;
+  margin: 0 auto;
+  padding: 20px;
+  display: inline-block;
+  color: var(--font-title);
 }
 
-footer p a {
-  color: #db0000;
-  text-decoration: none;
+.social-item {
+  display: inline-block;
+  width: 60px;
+  height: 60px;
+  position: relative;
+  border-radius: 50%;
+  font-size: 22px;
+  margin: 0 10px;
+  color: var(--secondary-bg);
 }
