--- a/inshokuten-resto/src/templates/index.html
+++ b/inshokuten-resto/src/templates/index.html
@@ -43,7 +43,7 @@
         <h1 class="hero__title">Why stay hungry when</h1>
         <p class="hero__tagline">you can search in Inshokuten</p>
         <a href="#explore">
-          <button class="explore">
+          <button class="btnexp explore">
             Explore<span class="icon-right"></span
             ><span class="icon-right after"></span>
           </button>
