fix submission styling

--- a/inshokuten-resto/src/templates/index.html
+++ b/inshokuten-resto/src/templates/index.html
@@ -32,8 +32,12 @@
       <nav id="navigationDrawer" class="app-bar__navigation">
         <ul>
           <li><a href="#/home">Home</a></li>
-          <!-- <li><a href="#/upcoming">Upcoming</a></li> -->
           <li><a href="#/favorite">Favorite</a></li>
+          <li>
+            <a href="https://linkedin.com/in/nicogulo/" target="_blank"
+              >About us
+            </a>
+          </li>
         </ul>
       </nav>
     </header>
