--- a/inshokuten-resto/src/styles/style.css
+++ b/inshokuten-resto/src/styles/style.css
@@ -316,6 +316,7 @@ main {
 }
 
 .resto-item .resto-item__content h3 a {
+  padding: 16px 0;
   color: var(--primary-bg);
   text-decoration: none;
 }
